Fix Slide 7 Icon Alignment: Precisely centered A/B Test and Retrain visuals

--- a/src/style.css
+++ b/src/style.css
@@ -512,6 +512,8 @@ p {
 
 .retrain-icon {
     transform-origin: center;
+    transform-box: fill-box;
+    display: inline-block;
 }
 
 .flow-text {
